[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "acs-rule-gap"
version = "0.4.0"
description = "Reproducible experiments for data-driven dependencies and business-rule validation on ACSIncome"
requires-python = ">=3.10"
dependencies = [
  "folktables>=0.0.12,<1",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "seaborn>=0.13,<1",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
